--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud Budget</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cloud Budget</title>
+  <link rel="stylesheet" href="css\styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+  <div class="header">
+    <div class="wrapper">
+      <div class="header-menu">
+        <div class="header-menu__logo">
+          <img src="img\header-logo-images.svg">
+          <div class="logo-name uppercase">CloudBudget</div>
+        </div>
+        <div class="header-menu__menu">
+          <a href="">
+            <div class="navbar-button uppercase">overview</div>
+          </a>
+          <a href="">
+            <div class="navbar-button uppercase">features</div>
+          </a>
+          <a href="">
+            <div class="navbar-button uppercase">technology</div>
+          </a>
+          <a href="">
+            <div class="navbar-button uppercase">contact</div>
+          </a>
+          <a href="">
+            <div class="navbar-button uppercase">Sign up</div>
+          </a>
+        </div>
+        <div class="header-menu__login-form">
+          <div class="language">
+            <img src="img\emojione-flag-for-flag-united-states.svg" alt="EN">
+            <button class="language__butoon uppercase">EN<img src="img\header-language-image-vector.svg"></button>
+          </div>
+        </div>
+      </div>
+      <div class="header-content">
+        <h1 class="uppercase">CloudBudget</h1>
+        <div class="header-content__text">Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial
+          of
+          Up to €4.99</div>
+        <button class="header-content__submit uppercase">Sign Up</button>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
