--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -39,6 +39,9 @@
             <img src="img\emojione-flag-for-flag-united-states.svg" alt="EN">
             <button class="language__butoon uppercase">EN<img src="img\header-language-image-vector.svg"></button>
           </div>
+          <div class="header-menu__login-button">
+            <button class="login-button">login</button>
+          </div>
         </div>
       </div>
       <div class="header-content">
