header-menu готова

--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -12,7 +12,7 @@
 <body>
   <div class="header">
     <div class="wrapper">
-      <div class="header-menu">
+      <div class="header-menu lato">
         <div class="header-menu__logo">
           <img src="img\header-logo-images.svg">
           <div class="logo-name uppercase">CloudBudget</div>
@@ -36,11 +36,11 @@
         </div>
         <div class="header-menu__login-form">
           <div class="language">
-            <img src="img\emojione-flag-for-flag-united-states.svg" alt="EN">
-            <button class="language__butoon uppercase">EN<img src="img\header-language-image-vector.svg"></button>
+            <img class="img-flag" src="img\emojione-flag-for-flag-united-states.svg" alt="EN">
+            <button class="language__butoon uppercase">EN<img class="img-vector" src="img\header-language-image-vector.svg"></button>
           </div>
           <div class="header-menu__login-button">
-            <button class="login-button">login</button>
+            <button class="login-button uppercase">login</button>
           </div>
         </div>
       </div>
