--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -12,7 +12,7 @@
 <body>
   <div class="header">
     <div class="wrapper">
-      <div class="header-menu lato">
+      <div class="header-menu">
         <div class="header-menu__logo">
           <img src="img\header-logo-images.svg">
           <div class="logo-name uppercase">CloudBudget</div>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="header-content">
-        <h1 class="uppercase">CloudBudget</h1>
+        <h1 class="header-content__heading uppercase">CloudBudget</h1>
         <div class="header-content__text">Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial
           of
           Up to €4.99</div>
