--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -53,6 +53,19 @@
       </div>
     </div>
   </div>
+  <article class="intro">
+    <div class="wrapper">
+      <div class="intro__information-block">
+        <div class="intro__heading"></div>
+        <div class="intro__text"></div>
+        <div class="intro__learn-more"></div>
+      </div>
+      <div class="intro__video-block">
+        <div class="intro__video-img"></div>
+        <button class="intro__button-play"></button>
+      </div>
+    </div>
+  </article>
 </body>
 
 </html>
