--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -56,9 +56,9 @@
   <article class="intro">
     <div class="wrapper">
       <div class="intro__information-block">
-        <div class="intro__heading"></div>
-        <div class="intro__text"></div>
-        <div class="intro__learn-more"></div>
+        <div class="intro__heading">Easy to Use Cloud Budget Management Software</div>
+        <div class="intro__text">Our software is made so you can access and manage your budget and expenses online at any time from any device. It provides detailed income and expense reports with graphs so you can easilly see your spending patterns and budget at a glance. Read below to find out more.</div>
+        <div class="intro__learn-more">Learn More</div>
       </div>
       <div class="intro__video-block">
         <div class="intro__video-img"></div>
