--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -66,6 +66,37 @@
       </div>
     </div>
   </article>
+  <article class="features">
+    <div class="wrapper">
+      <h2 class="features__title">Features</h2>
+      <div class="features__container">
+        <div class="features__items">
+          <img class="features__item-img" src="img/Features-item-image-SupportsAll.png" alt="">
+          <div class="features__item-content">
+            <div class="features__item-title">Supports All Currencies and Cards</div>
+            <div class="features__item-text">We support all popular currencies and is fully customizable to add</div>
+            <div class="features__item-ReadMore"><a href="#">Read More</a></div>
+          </div>
+        </div>
+        <div class="features__items">
+          <img class="features__item-img" src="img/Features-item-image-Manage.png" alt="">
+          <div class="features__item-content">
+            <div class="features__item-title">Manage your expenses on the go</div>
+            <div class="features__item-text">You can access your account from anywhere in the world on any device</div>
+            <div class="features__item-ReadMore"><a href="#">Read More</a></div>
+          </div>
+        </div>
+        <div class="features__items">
+          <img class="features__item-img" src="img/Features-item-image-CouldBadget.png" alt="">
+          <div class="features__item-content">
+            <div class="features__item-title">Cloud Budget Management Software</div>
+            <div class="features__item-text">Our software is made so you can access and manage your budget</div>
+            <div class="features__item-ReadMore"><a href="#">Read More</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
 </body>
 
 </html>
