--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -62,7 +62,7 @@
       </div>
       <div class="intro__video-block">
         <button class="intro__button-play"><img src="img/Video-play-img.svg"></button>
-        <div class="intro__video-img"><img src="img/Video_img.png"></div>
+        <img class="intro__video-img" src="img/Video_img.png">
       </div>
     </div>
   </article>
