add new container

--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -97,6 +97,37 @@
       </div>
     </div>
   </article>
+  <article class="technology">
+    <div class="wrapper">
+      <h2 class="technology__title"></h2>
+      <div class="technology__container">
+        <div class="technology__item">
+          <div class="technology__number-item"></div>
+          <img src="" alt="" class="technology__icon-item">
+          <div class="technology__title-item"></div>
+          <div class="technology__description-item"></div>
+        </div>
+        <div class="technology__item">
+          <div class="technology__number-item"></div>
+          <img src="" alt="" class="technology__icon-item">
+          <div class="technology__title-item"></div>
+          <div class="technology__description-item"></div>
+        </div>
+        <div class="technology__item">
+          <div class="technology__number-item"></div>
+          <img src="" alt="" class="technology__icon-item">
+          <div class="technology__title-item"></div>
+          <div class="technology__description-item"></div>
+        </div>
+        <div class="technology__item">
+          <div class="technology__number-item"></div>
+          <img src="" alt="" class="technology__icon-item">
+          <div class="technology__title-item"></div>
+          <div class="technology__description-item"></div>
+        </div>
+      </div>
+    </div>
+  </article>
 </body>
 
 </html>
