--- a/CloudBudget.html
+++ b/CloudBudget.html
@@ -99,32 +99,57 @@
   </article>
   <article class="technology">
     <div class="wrapper">
-      <h2 class="technology__title"></h2>
+      <h2 class="technology__title">Technology</h2>
       <div class="technology__container">
         <div class="technology__item">
-          <div class="technology__number-item"></div>
-          <img src="" alt="" class="technology__icon-item">
-          <div class="technology__title-item"></div>
-          <div class="technology__description-item"></div>
+          <div class="technology__number-container">
+            <div class="technology__number-item">01</div>
+            <img src="img/Technology-01-CloudStorage.svg" alt="" class="technology__icon-item">
+          </div>
+          <div class="technology__title-item">Cloud Storage</div>
+          <div class="technology__description-item">Access your account from anywhere in the world on any device</div>
         </div>
         <div class="technology__item">
-          <div class="technology__number-item"></div>
-          <img src="" alt="" class="technology__icon-item">
-          <div class="technology__title-item"></div>
-          <div class="technology__description-item"></div>
+          <div class="technology__number-container">
+            <div class="technology__number-item">02</div>
+            <img src="img/Technology-02-Secure.svg" alt="" class="technology__icon-item">
+          </div>
+          <div class="technology__title-item">Secure</div>
+          <div class="technology__description-item">All your information is stored on secure cloud servers</div>
         </div>
         <div class="technology__item">
-          <div class="technology__number-item"></div>
-          <img src="" alt="" class="technology__icon-item">
-          <div class="technology__title-item"></div>
-          <div class="technology__description-item"></div>
+          <div class="technology__number-container">
+            <div class="technology__number-item">03</div>
+            <img src="img/Technology-03-PDFDownload.svg" alt="" class="technology__icon-item">
+          </div>
+          <div class="technology__title-item">PDF Download</div>
+          <div class="technology__description-item">Download any of your reports in PDF format</div>
         </div>
         <div class="technology__item">
-          <div class="technology__number-item"></div>
-          <img src="" alt="" class="technology__icon-item">
-          <div class="technology__title-item"></div>
-          <div class="technology__description-item"></div>
+          <div class="technology__number-container">
+            <div class="technology__number-item">04</div>
+            <img src="img/Technology-04-CSVDownload.svg" alt="" class="technology__icon-item">
+          </div>
+          <div class="technology__title-item">CSV Download</div>
+          <div class="technology__description-item">All your information is stored on secure cloud servers</div>
         </div>
+      </div>
+    </div>
+  </article>
+  <article class="stay-focused">
+    <div class="wrapper">
+      <div class="stay-focused__information-block">
+        <div class="stay-focused__title">Stay focused on saving money</div>
+        <div class="stay-focused__description">It is important to stay focused on saving money in any way you can. We help you monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to get started!</div>
+        <div class="stay-focused__icons">
+          <img src="img/Stayfocused-1-icon-GooglePlaystore.svg" alt="" class="stay-focused__icon">
+          <img src="img/Stayfocused-2-icon-AppleStore.svg" alt="" class="stay-focused__icon">
+          <img src="img/Stayfocused-3-icon-windows.svg" alt="" class="stay-focused__icon"></div>
+      </div>
+      <div class="stay-focused__images-block">
+        <img src="" alt="" class="stay-focused__image">
+        <img src="" alt="" class="stay-focused__image">
+        <img src="" alt="" class="stay-focused__image">
       </div>
     </div>
   </article>
